--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -14,4 +14,7 @@
     <string name="clear">Удалить</string>
     <string name="clear_edit">Очистить поле</string>
     <string name="edit_text">Кнопка очистки</string>
+    <string name="chooser_share_post">Поделиться</string>
+    <string name="add_post">Добавить пост</string>
+    <string name="save">Сохранить</string>
 </resources>
